adding and configuring object storage system

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
+ENVIRONMENT=development
+
 # DB_HOST=localhost
 DB_HOST=0.0.0.0
 DB_PORT=5432
@@ -5,5 +7,13 @@ DB_NAME=skymark
 DB_USER=sky
 DB_PASSWORD=sky_password
 # Use in production - "require"
-DB_SSLMODE="disable"
+DB_SSLMODE=disable
 DB_CONNECT_TIMEOUT=10
+
+# MINI IO CREDENTIALS
+AWS_ACCESS_KEY_ID=minio
+AWS_SECRET_ACCESS_KEY=minio12345
+AWS_STORAGE_BUCKET_NAME=media
+AWS_S3_REGION_NAME=us-east-1
+
+MINI_IO_ENDPOINT_URL=http://localhost:9000
