--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,8 +9,6 @@ services:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
-    env_file:
-      - .env
     ports:
       - "5432:5432"
     healthcheck:
@@ -18,6 +16,37 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  minio:
+    image: minio/minio:latest
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: ${AWS_ACCESS_KEY_ID}
+      MINIO_ROOT_PASSWORD: ${AWS_SECRET_ACCESS_KEY}
+    ports:
+      - "9000:9000" # S3 API
+      - "9001:9001" # Web console
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/ready"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+
+  # Ensures buckets are set up properly
+  minio-init:
+    image: minio/mc
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+        mc alias set local http://minio:9000 ${AWS_ACCESS_KEY_ID} ${AWS_SECRET_ACCESS_KEY} &&
+        mc mb --ignore-existing local/${AWS_STORAGE_BUCKET_NAME} &&
+        mc anonymous set download local/${AWS_STORAGE_BUCKET_NAME}
+      "
+    restart: "no"
 
 volumes:
   postgres_data:
+  minio_data:
