--- a/website/package.json
+++ b/website/package.json
@@ -14,10 +14,14 @@
     "@react-router/serve": "^7.7.1",
     "@tanstack/react-query": "^5.85.0",
     "@tanstack/react-query-devtools": "^5.85.0",
+    "@types/mapbox-gl": "^3.4.1",
     "axios": "^1.11.0",
+    "geojson": "^0.5.0",
     "isbot": "^5.1.27",
+    "mapbox-gl": "^3.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-map-gl": "^8.0.4",
     "react-router": "^7.7.1",
     "zustand": "^5.0.7"
   },
